...
    modifier: Modifier = Modifier,
) {
    val homeState = home.state.subscribeAsState().value
    val journeyState = journeySearch?.state?.subscribeAsState()?.value
    val routeFavorite = journeySearch?.favoriteRouteState?.subscribeAsState()?.value
    LazyColumn(
        modifier.fillMaxSize().padding(horizontal = TrenifySpacing.screenHorizontal).testTag("home-list"),
        verticalArrangement = Arrangement.spacedBy(TrenifySpacing.l),
    ) {
        item {
            Text(
                stringResource(R.string.home_title),
                Modifier.padding(top = TrenifySpacing.l).semantics { heading() }.testTag("home-title"),
...
